# holbertonschool-hbnb

./: .coverage  .coveragerc  .gitignore  README.md  start.sh
UML/: README.md
part3/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  READMEpart2.md  TODO.md  api_test_script.sh  config.py  fix_flake8.py  pyproject.toml  requirements.txt  setup.cfg
part3/SQL/: schema.sql  seed.sql
part3/app/: __init__.py  cli.py
part3/app/api/: __init__.py  utils.py
part3/app/api/v1/: amenities.py  auth.py  places.py  reviews.py  users.py
part3/app/frontend/: app.css  index.html  index2.html  login.html  user.html
part3/app/models/: __init__.py  amenity.py  basemodel.py  mixins.py  place.py  placeamenity.py  review.py  user.py
part3/app/persistence/: repository.py
part3/app/services/: facade.py
part3/app/utils/: __init__.py  auth.py  ghost_decorators.py  ghost_validator.py  haunted_logger.py  phantom_types.py  spooky_spells.py
part3/docs/: schemas.mmd
part3/logs/api/: debug.log.2  error.log.1
part3/logs/models/: debug.log.1  debug.log.2  error.log.3  info.log.3
part3/tests/: __init__.py  conftest.py
part3/tests/models/: test_user.py
part3/tests/test_api/: test_api_routes.py
part3/tests/test_api/amenities/: test_amenities.py
part3/tests/test_api/auth/: test_auth.py
part3/tests/test_api/places/: test_places.py  test_places_amenities.py  test_places_creation.py  test_places_extended.py  test_places_reviews.py
part3/tests/test_api/reviews/: test_reviews.py
part3/tests/test_models/: test_user.py
part3/tools/: bcrypt_generator.py
(+139 files in other folders)
