[tool.poetry]
package-mode = false
name = "hbnb"
version = "0.1.0"
description = "Where ghosts come to REST! 👻"
authors = ["Noziop <contact@fassih.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-restx = "^1.3.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
python-dotenv = "^1.0.1"
flask-bcrypt = "^1.0.1"
flask-cors = "^5.0.0"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pycodestyle = "^2.12.1"
genbadge = {extras = ["all"], version = "^1.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79  # Pour respecter PEP8/pycodestyle
target-version = ['py310']  # Tu as python 3.10 dans tes dépendances

[tool.flake8]
max-line-length = 79
extend-ignore = "E203"  # Pour que flake8 et black s'entendent bien
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "part2",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79  # Aligner avec black
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poetry.scripts]
test = "pytest:main"
test-v = "pytest:main -v"
test-cov = "pytest:main --cov=app --cov-report=term-missing --cov-report=html"
